--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,229 +1,230 @@
 .main {
+  background-color: greenyellow;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-  padding: 6rem;
-  min-height: 100vh;
+  flex: 1;
+  align-self: center;
 }
 
 .description {
-  display: inherit;
-  justify-content: inherit;
-  align-items: inherit;
-  font-size: 0.85rem;
-  max-width: var(--max-width);
-  width: 100%;
-  z-index: 2;
-  font-family: var(--font-mono);
-}
-
-.description a {
   display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 0.5rem;
+  height: 100%;
+  flex-direction: column;
+  font-size: 0.85rem;
+  z-index: 2;
+  flex: 1;
+  align-self: center;
+
+  /* font-family: var(--font-mono); */
 }
 
-.description p {
-  position: relative;
-  margin: 0;
-  padding: 1rem;
-  background-color: rgba(var(--callout-rgb), 0.5);
-  border: 1px solid rgba(var(--callout-border-rgb), 0.3);
-  border-radius: var(--border-radius);
+.mainHeader {
+  width: 100%;
+  display: flex;
 }
 
-.code {
+.textContent {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.topTitle {
+  font-family: Nunito;
+  font-size: 1.25rem;
   font-weight: 700;
-  font-family: var(--font-mono);
+  font-style: normal;
+  line-height: 120%;
 }
 
-.grid {
-  display: grid;
-  grid-template-columns: repeat(4, minmax(25%, auto));
-  width: var(--max-width);
+.title {
+  font-family: Raleway;
+  font-size: 4rem;
+  font-weight: 700;
+  font-style: normal;
+  line-height: 120%;
+}
+
+.subtitle {
+  color: #828282;
+  font-family: Nunito;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 150%;
+}
+
+.dummyRect {
+  width: 10%;
+  /* height: 1 */
+  background-color: yellow;
+}
+
+.navbar {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  z-index: 5;
+  position: relative;
+  /* background-color: chocolate; */
+}
+
+.options {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 25rem;
+}
+
+.navtext {
+  color: #25282b;
+  font-family: Raleway;
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.75rem; /* 155.556% */
+}
+
+.selfImg {
+  width: 35rem;
+  height: 35rem;
+  z-index: 2;
+  transform: translateY(-11%);
+}
+
+.button {
+  background-color: #fdc435;
+  border-radius: 0.5rem;
+  display: inline-flex;
+  flex-direction: column;
+  padding: 0.5rem 3rem;
+  align-items: center;
   max-width: 100%;
 }
 
-.card {
-  padding: 1rem 1.2rem;
-  border-radius: var(--border-radius);
-  background: rgba(var(--card-rgb), 0);
-  border: 1px solid rgba(var(--card-border-rgb), 0);
-  transition: background 200ms, border 200ms;
+.buttonText {
+  font-family: Roboto;
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 150%;
+  max-width: 100%;
 }
 
-.card span {
+.inlinePara {
   display: inline-block;
-  transition: transform 200ms;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
-.card h2 {
-  font-weight: 600;
-  margin-bottom: 0.7rem;
+.linkedInCont {
+  background-color: inherit;
+  font-family: Roboto;
+  border: 2px solid #25282b;
 }
 
-.card p {
-  margin: 0;
-  opacity: 0.6;
-  font-size: 0.9rem;
-  line-height: 1.5;
-  max-width: 30ch;
-}
-
-.center {
+.cardHolder {
+  width: 100%;
   display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.dummyHeight {
+  height: 5rem;
+}
+
+.cardCont {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  border-radius: 1.5rem;
+  overflow: hidden;
+  width: 80%;
+  min-height: 32vw;
+  background-color: cadetblue;
+}
+
+.cardImgCont {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  flex: 1;
+  align-self: stretch;
+  width: 50%;
+  background-color: darkmagenta;
+}
+
+.cardImg {
+  align-self: center;
+}
+
+.cardContent {
+  padding: 3rem;
+  display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  position: relative;
-  padding: 4rem 0;
+  width: 50%;
 }
 
-.center::before {
-  background: var(--secondary-glow);
-  border-radius: 50%;
-  width: 480px;
-  height: 360px;
-  margin-left: -400px;
+.projectContent {
+  color: #828282;
+  font-family: Nunito;
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 150%; /* 27px */
 }
 
-.center::after {
-  background: var(--primary-glow);
-  width: 240px;
-  height: 180px;
-  z-index: -1;
+.viewProjectButton {
+  border-radius: 6rem;
+  margin-top: 1.5rem;
+  margin-right: auto;
 }
 
-.center::before,
-.center::after {
-  content: '';
-  left: 50%;
-  position: absolute;
-  filter: blur(45px);
-  transform: translateZ(0);
-}
-
-.logo {
-  position: relative;
-}
-/* Enable hover only on non-touch devices */
-@media (hover: hover) and (pointer: fine) {
-  .card:hover {
-    background: rgba(var(--card-rgb), 0.1);
-    border: 1px solid rgba(var(--card-border-rgb), 0.15);
-  }
-
-  .card:hover span {
-    transform: translateX(4px);
-  }
-}
-
-@media (prefers-reduced-motion) {
-  .card:hover span {
-    transform: none;
-  }
-}
-
-/* Mobile */
-@media (max-width: 700px) {
-  .content {
-    padding: 4rem;
-  }
-
-  .grid {
-    grid-template-columns: 1fr;
-    margin-bottom: 120px;
-    max-width: 320px;
-    text-align: center;
-  }
-
-  .card {
-    padding: 1rem 2.5rem;
-  }
-
-  .card h2 {
-    margin-bottom: 0.5rem;
-  }
-
-  .center {
-    padding: 8rem 0 6rem;
-  }
-
-  .center::before {
-    transform: none;
-    height: 300px;
-  }
-
-  .description {
-    font-size: 0.8rem;
-  }
-
-  .description a {
-    padding: 1rem;
-  }
-
-  .description p,
-  .description div {
-    display: flex;
-    justify-content: center;
-    position: fixed;
+@media (width <= 480px) {
+  .selfImg {
     width: 100%;
+    height: 25rem;
   }
+}
 
-  .description p {
+@media (width <= 990px) {
+  .mainHeader {
+    flex-direction: column-reverse;
     align-items: center;
-    inset: 0 0 auto;
-    padding: 2rem 1rem 1.4rem;
-    border-radius: 0;
-    border: none;
-    border-bottom: 1px solid rgba(var(--callout-border-rgb), 0.25);
-    background: linear-gradient(
-      to bottom,
-      rgba(var(--background-start-rgb), 1),
-      rgba(var(--callout-rgb), 0.5)
-    );
-    background-clip: padding-box;
-    backdrop-filter: blur(24px);
   }
 
-  .description div {
-    align-items: flex-end;
-    pointer-events: none;
-    inset: auto 0 0;
-    padding: 2rem;
-    height: 200px;
-    background: linear-gradient(
-      to bottom,
-      transparent 0%,
-      rgb(var(--background-end-rgb)) 40%
-    );
-    z-index: 1;
-  }
-}
-
-/* Tablet and Smaller Desktop */
-@media (min-width: 701px) and (max-width: 1120px) {
-  .grid {
-    grid-template-columns: repeat(2, 50%);
-  }
-}
-
-@media (prefers-color-scheme: dark) {
-  .vercelLogo {
-    filter: invert(1);
+  .textContent {
+    margin-top: 4rem;
+    align-items: center;
   }
 
-  .logo {
-    filter: invert(1) drop-shadow(0 0 0.3rem #ffffff70);
+  .selfImg {
+    transform: translateY(0%);
+    margin-top: 4rem;
   }
-}
 
-@keyframes rotate {
-  from {
-    transform: rotate(360deg);
+  .cardCont {
+    flex-direction: column;
+    width: 50%;
   }
-  to {
-    transform: rotate(0deg);
+
+  .cardImgCont {
+    width: 100%;
+    height: 350vw;
+    background-color: purple;
+    border: 20px solid white;
+  }
+
+  .cardContent {
+    padding: 1rem;
   }
 }
