--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,10 +2,15 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  font-size: 62.5%;
+}
+
+html {
+  overflow-x: hidden;
 }
 
 body {
-  background-color: red;
+  /* background-color: red; */
   max-width: 100%;
   overflow-x: hidden;
 }
