--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,5 +1,5 @@
 .main {
-  background-color: greenyellow;
+  background-color: #fcf9f7;
   display: flex;
   flex-direction: column;
   flex: 1;
@@ -7,6 +7,7 @@
 }
 
 .description {
+  margin-top: 5rem;
   display: flex;
   height: 100%;
   flex-direction: column;
@@ -54,13 +55,8 @@
   line-height: 150%;
 }
 
-.dummyRect {
-  width: 10%;
-  /* height: 1 */
-  background-color: yellow;
-}
-
-.navbar {
+.header {
+  width: 100%;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -69,20 +65,40 @@
   padding-bottom: 1rem;
   z-index: 5;
   position: relative;
+  box-shadow: 0 0 16px rgba(0,0,0,.075);
+  position: sticky;
   /* background-color: chocolate; */
 }
 
-.options {
+.navIconCont {
+  display: none;
+  background: transparent;
+  cursor: pointer;
+}
+
+.navbar {
+  width: 100%;
   display: flex;
+  flex-direction: row-reverse;
+  align-items: flex-end;
+  align-self: flex-end;
+  /* background-color: greenyellow; */
+}
+
+.navOptions {
+  /* background-color: red; */
+  width: 40%;
+  display: flex;
+  /* flex: 1; */
   flex-direction: row;
-  justify-content: space-between;
-  width: 25rem;
+  align-items: center;
+  justify-content: space-around;
 }
 
 .navtext {
   color: #25282b;
   font-family: Raleway;
-  font-size: 1rem;
+  font-size: 2rem;
   font-style: normal;
   font-weight: 500;
   line-height: 1.75rem; /* 155.556% */
@@ -100,7 +116,7 @@
   border-radius: 0.5rem;
   display: inline-flex;
   flex-direction: column;
-  padding: 0.5rem 3rem;
+  padding: 0.5rem 1.5rem;
   align-items: center;
   max-width: 100%;
 }
@@ -171,7 +187,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 50%;
+  width: 70%;
 }
 
 .projectContent {
@@ -189,6 +205,15 @@
   margin-right: auto;
 }
 
+.footerContainer {
+  margin-top: auto;
+}
+
+.footerImg {
+  width: 100%;
+  height: 22rem;
+}
+
 @media (width <= 480px) {
   .selfImg {
     width: 100%;
@@ -196,7 +221,77 @@
   }
 }
 
-@media (width <= 990px) {
+@media (max-width: 980px) {
+  .navbar {
+    position: absolute;
+    width: 100%;
+    min-height: 100vh;
+    top: 0;
+    right: 0;
+    justify-content: flex-start;
+    background-color: pink;
+    flex-direction: column;
+
+    /* to get the tranisition  */
+    transform: translateX(100%);
+    transition: all 0.5s linear;
+
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+  }
+
+  .navIconCont {
+    display: flex;
+    flex: 1;
+    flex-direction: row;
+    align-self: flex-end;
+    z-index: 5;
+  }
+
+  .active .navbar {
+    transform: translateX(0%);
+    opacity: 1;
+    visibility: visible;
+    pointer-events: auto;
+  }
+
+  .menuIcon {
+    margin-left: auto;
+    width: 4rem;
+    height: 4rem;
+  }
+
+  .active .navIconCont .menuIcon {
+    display: none;
+  }
+
+  .active .navIconCont .closeIcon {
+    display: block;
+    margin-left: auto;
+    width: 4rem;
+    height: 4rem;
+  }
+
+  .closeIcon {
+    display: none;
+  }
+
+  .navOptions {
+    display: none;
+    /* visibility: hidden; */
+    margin-top: 3.2rem;
+    flex-direction: column;
+    align-items: center;
+    /* flex: 1; */
+    height: 70vh;
+    background-color: green;
+  }
+
+  .showNavOptions {
+    display: flex;
+  }
+
   .mainHeader {
     flex-direction: column-reverse;
     align-items: center;
@@ -221,7 +316,7 @@
     width: 100%;
     height: 350vw;
     background-color: purple;
-    border: 20px solid white;
+    /* border: 20px solid white; */
   }
 
   .cardContent {
