--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,5 +1,5 @@
 .main {
-  background-color: #fcf9f7;
+  background-color: #e8ecf4;
   display: flex;
   flex-direction: column;
   flex: 1;
@@ -15,8 +15,7 @@
   z-index: 2;
   flex: 1;
   align-self: center;
-
-  /* font-family: var(--font-mono); */
+  padding: 0 4rem;
 }
 
 .mainHeader {
@@ -31,11 +30,13 @@
 }
 
 .topTitle {
+  color: #fdc435;
   font-family: Nunito;
-  font-size: 1.25rem;
-  font-weight: 700;
+  font-size: 2rem;
   font-style: normal;
-  line-height: 120%;
+  font-weight: 700;
+  line-height: normal;
+  text-transform: uppercase;
 }
 
 .title {
@@ -49,7 +50,7 @@
 .subtitle {
   color: #828282;
   font-family: Nunito;
-  font-size: 24px;
+  font-size: 2.4rem;
   font-style: normal;
   font-weight: 400;
   line-height: 150%;
@@ -61,73 +62,38 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  padding-top: 1rem;
-  padding-bottom: 1rem;
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
   z-index: 5;
   position: relative;
-  box-shadow: 0 0 16px rgba(0,0,0,.075);
+  box-shadow: 0 0 16px rgba(0, 0, 0, 0.075);
   position: sticky;
-  /* background-color: chocolate; */
+  /* background-color: #e8ecf4; */
+  /* z-index: -2; */
 }
 
-.navIconCont {
-  display: none;
-  background: transparent;
-  cursor: pointer;
-}
-
-.navbar {
-  width: 100%;
-  display: flex;
-  flex-direction: row-reverse;
-  align-items: flex-end;
-  align-self: flex-end;
-  /* background-color: greenyellow; */
-}
-
-.navOptions {
+.imgWrapper {
+  z-index: 5;
+  width: 100rem;
+  height: 56rem;
+  transform: translateX(10%) translateY(-31%);
   /* background-color: red; */
-  width: 40%;
-  display: flex;
-  /* flex: 1; */
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-around;
+  overflow-x: hidden;
 }
 
-.navtext {
-  color: #25282b;
-  font-family: Raleway;
-  font-size: 2rem;
-  font-style: normal;
-  font-weight: 500;
-  line-height: 1.75rem; /* 155.556% */
+.yellowBg {
+  overflow-x: hidden;
+  width: 76rem;
+  margin-left: 8rem;
+  z-index: 1;
 }
 
 .selfImg {
-  width: 35rem;
-  height: 35rem;
+  position: relative;
+  /* height: 1.33 * 50rem; */
+  width: 50rem;
+  margin-left: 8rem;
   z-index: 2;
-  transform: translateY(-11%);
-}
-
-.button {
-  background-color: #fdc435;
-  border-radius: 0.5rem;
-  display: inline-flex;
-  flex-direction: column;
-  padding: 0.5rem 1.5rem;
-  align-items: center;
-  max-width: 100%;
-}
-
-.buttonText {
-  font-family: Roboto;
-  font-size: 1rem;
-  font-style: normal;
-  font-weight: 500;
-  line-height: 150%;
-  max-width: 100%;
 }
 
 .inlinePara {
@@ -137,10 +103,16 @@
   text-overflow: ellipsis;
 }
 
+.buttonContainer {
+  display: flex;
+  flex-direction: row;
+  margin-top: 2rem;
+}
+
 .linkedInCont {
   background-color: inherit;
-  font-family: Roboto;
   border: 2px solid #25282b;
+  margin-left: 1.2rem;
 }
 
 .cardHolder {
@@ -148,65 +120,16 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-top: 8rem;
 }
 
 .dummyHeight {
   height: 5rem;
 }
 
-.cardCont {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-  border-radius: 1.5rem;
-  overflow: hidden;
-  width: 80%;
-  min-height: 32vw;
-  background-color: cadetblue;
-}
-
-.cardImgCont {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  flex: 1;
-  align-self: stretch;
-  width: 50%;
-  background-color: darkmagenta;
-}
-
-.cardImg {
-  align-self: center;
-}
-
-.cardContent {
-  padding: 3rem;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  width: 70%;
-}
-
-.projectContent {
-  color: #828282;
-  font-family: Nunito;
-  font-size: 1rem;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 150%; /* 27px */
-}
-
-.viewProjectButton {
-  border-radius: 6rem;
-  margin-top: 1.5rem;
-  margin-right: auto;
-}
-
 .footerContainer {
   margin-top: auto;
+  padding: -4rem 0;
 }
 
 .footerImg {
@@ -214,112 +137,75 @@
   height: 22rem;
 }
 
-@media (width <= 480px) {
-  .selfImg {
-    width: 100%;
-    height: 25rem;
+@media (max-width: 1280px) {
+  .imgWrapper {
+    z-index: 5;
+    height: 39rem;
+    width: 48rem;
+    overflow-x: visible;
+    align-self: center;
+    /* margin-top: 2rem; */
+    transform: translateX(5%) translateY(-21%);
+  }
+
+  .yellowBg {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    overflow-x: hidden;
+    height: 32rem;
+    width: 32rem;
+    /* margin-top: 4rem; */
+    z-index: 1;
+    align-self: center;
   }
 }
 
-@media (max-width: 980px) {
-  .navbar {
-    position: absolute;
-    width: 100%;
-    min-height: 100vh;
-    top: 0;
-    right: 0;
-    justify-content: flex-start;
-    background-color: pink;
-    flex-direction: column;
+@media (max-width: 1024px) {
+}
 
-    /* to get the tranisition  */
-    transform: translateX(100%);
-    transition: all 0.5s linear;
-
-    opacity: 0;
-    visibility: hidden;
-    pointer-events: none;
-  }
-
-  .navIconCont {
-    display: flex;
-    flex: 1;
-    flex-direction: row;
-    align-self: flex-end;
-    z-index: 5;
-  }
-
-  .active .navbar {
-    transform: translateX(0%);
-    opacity: 1;
-    visibility: visible;
-    pointer-events: auto;
-  }
-
-  .menuIcon {
-    margin-left: auto;
-    width: 4rem;
-    height: 4rem;
-  }
-
-  .active .navIconCont .menuIcon {
-    display: none;
-  }
-
-  .active .navIconCont .closeIcon {
-    display: block;
-    margin-left: auto;
-    width: 4rem;
-    height: 4rem;
-  }
-
-  .closeIcon {
-    display: none;
-  }
-
-  .navOptions {
-    display: none;
-    /* visibility: hidden; */
-    margin-top: 3.2rem;
-    flex-direction: column;
-    align-items: center;
-    /* flex: 1; */
-    height: 70vh;
-    background-color: green;
-  }
-
-  .showNavOptions {
-    display: flex;
-  }
-
+@media (max-width: 768px) {
   .mainHeader {
     flex-direction: column-reverse;
     align-items: center;
   }
 
   .textContent {
-    margin-top: 4rem;
+    margin-top: 10rem;
     align-items: center;
   }
 
-  .selfImg {
-    transform: translateY(0%);
+  .imgWrapper {
+    z-index: 5;
+    height: 32rem;
+    width: 32rem;
+    overflow-x: visible;
+    align-self: center;
+    transform: translateX(0%) translateY(-10%);
+  }
+
+  .yellowBg {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    overflow-x: hidden;
+    height: 32rem;
+    width: 32rem;
     margin-top: 4rem;
+    z-index: 1;
+    align-self: center;
   }
+}
 
-  .cardCont {
-    flex-direction: column;
-    width: 50%;
-  }
+@media (max-width: 640px) {
+}
 
-  .cardImgCont {
+@media (max-width: 480px) {
+  .yellowBg {
+    overflow: hidden;
     width: 100%;
-    height: 350vw;
-    background-color: purple;
-    /* border: 20px solid white; */
-  }
-
-  .cardContent {
-    padding: 1rem;
+    height: 25rem;
+    z-index: 1;
+    align-self: center;
   }
 }
