--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,6 +15,12 @@ body {
   overflow-x: hidden;
 }
 
+button {
+  border: none;
+  margin: 0;
+  padding: 0;
+}
+
 .bodyContainer {
   max-width: 1440px;
   min-height: 100vh;
@@ -22,4 +28,5 @@ body {
   flex-direction: column;
   /* justify-content: space-between; */
   margin: 0 auto;
+  align-items: flex-start;
 }
