--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -21,10 +21,14 @@
 .mainHeader {
   width: 100%;
   display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  /* background-color: #828282; */
 }
 
 .textContent {
-  width: 100%;
+  /* width: 100%; */
+  /* background-color: orange; */
   display: flex;
   flex-direction: column;
 }
@@ -56,35 +60,21 @@
   line-height: 150%;
 }
 
-.header {
-  width: 100%;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-  padding-top: 1.5rem;
-  padding-bottom: 1.5rem;
-  z-index: 5;
-  position: relative;
-  box-shadow: 0 0 16px rgba(0, 0, 0, 0.075);
-  position: sticky;
-  /* background-color: #e8ecf4; */
-  /* z-index: -2; */
-}
-
 .imgWrapper {
+  /* flex-grow: 1; */
   z-index: 5;
-  width: 100rem;
+  width: calc(0.7486 * 56rem);
   height: 56rem;
-  transform: translateX(10%) translateY(-31%);
+  transform: translateX(0%) translateY(-10%);
   /* background-color: red; */
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
 }
 
 .yellowBg {
-  overflow-x: hidden;
-  width: 76rem;
-  margin-left: 8rem;
+  /* overflow-x: hidden; */
+  width: calc(0.7486 * 56rem);
+  height: 56rem;
+  /* margin-left: 8rem; */
   z-index: 1;
 }
 
@@ -127,9 +117,81 @@
   height: 5rem;
 }
 
-.footerContainer {
+.contactFooter {
+  width: 100%;
   margin-top: auto;
-  padding: -4rem 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 8rem;
+
+  /* background-color: red; */
+}
+
+.contactIcons {
+  margin-top: 30rem;
+
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  /* background-color: green; */
+}
+
+.twitterIcon {
+  margin-left: 2.4rem;
+  width: 4.8rem;
+  height: 4.8rem;
+  /* background-color: blueviolet; */
+}
+
+.linkedInIcon {
+  width: 4.8rem;
+  height: 4.8rem;
+  /* background-color: blueviolet; */
+}
+
+.emailIcon {
+  /* margin-left: 2.4rem; */
+  width: 2.4rem;
+  height: 2.4rem;
+  /* background-color: aqua; */
+}
+
+.contactName {
+  margin-top: 4rem;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  /* background-color: aqua; */
+}
+
+.orKey {
+  /* color: #828282; */
+  font-family: Nunito;
+  font-size: 2rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+
+.nameStyle {
+  padding-bottom: 0.5rem;
+
+  margin-left: 2rem;
+  color: #828282;
+  font-family: Nunito;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+
+.footerContainer {
+  /* margin-top: 4rem; */
+  /* width: 100vw; */
 }
 
 .footerImg {
@@ -139,32 +201,25 @@
 
 @media (max-width: 1280px) {
   .imgWrapper {
+    /* flex-grow: 1; */
     z-index: 5;
-    height: 39rem;
-    width: 48rem;
-    overflow-x: visible;
-    align-self: center;
-    /* margin-top: 2rem; */
-    transform: translateX(5%) translateY(-21%);
+    width: calc(0.7486 * 56rem);
+    height: 56rem;
+    transform: translateX(0%) translateY(0%);
+    /* background-color: red; */
+    /* overflow-x: hidden; */
   }
 
   .yellowBg {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    overflow-x: hidden;
-    height: 32rem;
-    width: 32rem;
-    /* margin-top: 4rem; */
+    /* overflow-x: hidden; */
+    width: calc(0.7486 * 56rem);
+    height: 56rem;
+    /* margin-left: 8rem; */
     z-index: 1;
-    align-self: center;
   }
 }
 
 @media (max-width: 1024px) {
-}
-
-@media (max-width: 768px) {
   .mainHeader {
     flex-direction: column-reverse;
     align-items: center;
@@ -175,13 +230,12 @@
     align-items: center;
   }
 
-  .imgWrapper {
+  /* .imgWrapper {
     z-index: 5;
-    height: 32rem;
-    width: 32rem;
+    width: calc(0.7486 * 56rem);
+    height: 56rem;
     overflow-x: visible;
     align-self: center;
-    transform: translateX(0%) translateY(-10%);
   }
 
   .yellowBg {
@@ -189,12 +243,15 @@
     margin-left: auto;
     margin-right: auto;
     overflow-x: hidden;
-    height: 32rem;
-    width: 32rem;
+    width: calc(0.7486 * 56rem);
+    height: 562rem;
     margin-top: 4rem;
     z-index: 1;
     align-self: center;
-  }
+  } */
+}
+
+@media (max-width: 768px) {
 }
 
 @media (max-width: 640px) {
