--- a/src/app/components/card/page.module.css
+++ b/src/app/components/card/page.module.css
@@ -1,4 +1,10 @@
+.cardCont:hover :global {
+  animation: pulse;
+  animation-duration: 200ms;
+}
+
 .cardCont {
+  cursor: pointer;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -35,11 +41,6 @@
   margin-bottom: 2rem;
 }
 
-.translearnImgTextStyle {
-  width: 12rem;
-  height: 6rem;
-}
-
 .cardContent {
   padding: 2rem 4.8rem;
   display: flex;
@@ -51,7 +52,7 @@
 
 .projectContent {
   color: #828282;
-  font-family: Nunito;
+  font-family: var(--nunito-font);
   font-size: 1.6rem;
   font-style: normal;
   font-weight: 400;
@@ -78,7 +79,7 @@
 
 .viewProjectButtonText {
   color: #25282b;
-  font-family: Roboto;
+  font-family: var(--roboto-font);
   font-size: 1.8rem;
   font-style: normal;
   font-weight: 500;
