--- a/src/app/components/navbar/page.module.css
+++ b/src/app/components/navbar/page.module.css
@@ -41,7 +41,7 @@
 
 .navtext {
   color: #25282b;
-  font-family: Raleway;
+  font-family: var(--raleway-font);
   font-size: 2rem;
   font-style: normal;
   font-weight: 500;
