--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,5 @@
+@import "animate.css";
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -13,6 +15,7 @@ body {
   /* background-color: red; */
   max-width: 100%;
   overflow-x: hidden;
+
 }
 
 button {
