--- a/src/app/components/button/page.module.css
+++ b/src/app/components/button/page.module.css
@@ -3,21 +3,37 @@
   border-radius: 0.5rem;
   display: inline-flex;
   flex-direction: column;
-  padding: 0.5rem 1.5rem;
+  padding: 0.3rem 2rem;
   align-items: center;
   max-width: 100%;
   align-self: flex-start;
+  border: none;
 }
 
 .button:hover {
   cursor: pointer;
+  /* animation: zoomIn;
+  animation-duration: 1s; */
+  background-color: rgba(253, 196, 53, 1);
+  border-color: #fdc435;
+  /* box-shadow: 0 0 0 0 #fff, 0 0 0 0.1rem #4070f4; */
 }
 
 .buttonText {
   font-family: var(--roboto-font);
-  font-size: 1.8rem;
+  font-size: 1.6rem;
   font-style: normal;
   font-weight: 500;
+  line-height: 150%;
+  max-width: 100%;
+  display: flex;
+  align-items: center;
+}
+
+.buttonText:hover {
+  font-size: 1.6rem;
+  font-style: normal;
+  font-weight: 700;
   line-height: 150%;
   max-width: 100%;
 }
