--- a/src/app/components/card/page.module.css
+++ b/src/app/components/card/page.module.css
@@ -42,7 +42,7 @@
 }
 
 .cardContent {
-  padding: 2rem 4.8rem;
+  padding: 2rem 3.6rem;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -62,7 +62,7 @@
 
 .projectName {
   color: var(--font-high-emphasis, #25282b);
-  font-family: Playfair Display;
+  font-family: var(--raleway-font);
   font-size: 2rem;
   font-style: normal;
   font-weight: 700;
@@ -71,7 +71,7 @@
 }
 
 .viewProjectButton {
-  border-radius: 6rem;
+  /* border-radius: 6rem; */
   margin-top: 1rem;
   border: 1px solid #25282b;
   margin-right: auto;
@@ -81,10 +81,16 @@
 .viewProjectButtonText {
   color: #25282b;
   font-family: var(--roboto-font);
-  font-size: 1.8rem;
+  font-size: 1.6rem;
   font-style: normal;
   font-weight: 500;
   line-height: 150%; /* 27px */
+}
+
+.newTabIcon {
+  width: 1.5rem;
+  height: 1.5rem;
+  margin-left: 0.5rem;
 }
 
 @media (max-width: 1280px) {
@@ -114,7 +120,7 @@
   .cardCont {
     flex-direction: column;
     width: 70%;
-    height: 58rem;
+    height: 45rem;
   }
 
   .cardImgCont {
@@ -122,8 +128,12 @@
   }
 
   .cardContent {
-    padding: 2rem 1.6rem;
+    padding: 2.4rem 2.4rem;
     height: 60%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
 }
 
@@ -131,7 +141,7 @@
   .cardCont {
     flex-direction: column;
     width: 90%;
-    height: 48rem;
+    height: 42rem;
   }
 
   .cardImgCont {
@@ -139,7 +149,7 @@
   }
 
   .cardContent {
-    padding: 1.6rem 1.6rem;
+    padding: 2.4rem 2.4rem;
     height: 75%;
   }
 }
@@ -148,7 +158,7 @@
   .cardCont {
     flex-direction: column;
     width: 90%;
-    height: 50rem;
+    height: 44rem;
   }
 }
 
@@ -156,6 +166,6 @@
   .cardCont {
     flex-direction: column;
     width: 87%;
-    height: 50rem;
+    height: 44rem;
   }
 }
