--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,7 +15,7 @@ body {
   /* background-color: red; */
   max-width: 100%;
   overflow-x: hidden;
-
+  background-color: #e8ecf4e4;
 }
 
 button {
@@ -25,11 +25,22 @@ button {
 }
 
 .bodyContainer {
-  max-width: 1440px;
+  /* max-width: 1440px; */
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   /* justify-content: space-between; */
   margin: 0 auto;
   align-items: flex-start;
+  background-color: #e8ecf4;
+}
+
+.footerContainer {
+  /* margin-top: 4rem; */
+  width: 100%;
+}
+
+.footerImg {
+  width: 100%;
+  height: 22rem;
 }
