--- a/src/app/components/card/page.module.css
+++ b/src/app/components/card/page.module.css
@@ -46,7 +46,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  align-items: center;
+  align-items: flex-start;
   width: 70%;
 }
 
